samples/_failures_safe/1761242973_8e1a51_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f11357d2.c: In function ‘main’:
./samples/SAFE/__tmp_f11357d2.c:154:5: error: expected expression at end of input
  154 |     printf("Enter text to analyze (max %zu characters):\n", sizeof
      |     ^~~~~~
./samples/SAFE/__tmp_f11357d2.c:154:5: error: expected declaration or statement at end of input
